<resources>
    <string name="app_name">Heart Alert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="back_button_desc">Ikon kembali</string>
    <string name="article_image_desc">Gambar dari artikel terkait</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="back">Kembali</string>
    <string name="next">Lanjut</string>
    <string name="insert_age">Masukkan Umur</string>
    <string name="ya">Ya</string>
    <string name="no">Tidak</string>
    <string name="chestpain">Rating tingkat nyeri dada anda</string>
    <string name="restingbpm">Ukur detak jantung anda saat anda sedang santai.</string>
    <string name="activitybpm">Ukur Detak jantung anda saat anda Berolahraga</string>
    <string name="chesstight">Apakah olahraga menyebabkan sesak dada?</string>
    <string name="done">Selesai</string>
    <string name="intro1">Sebelum memulai, harap perhatikan:</string>
    <string name="intro2">• Aplikasi ini hanya menampilkan informasi mengenai kesehatan jantung anda.</string>
    <string name="intro3">• Aplikasi ini mungkin tidak akurat. Akurasi pengukuran berdasarkan kualitas kamera, dan pencahayaan pada ponsel anda.</string>
    <string name="intro4">Jika terdapat tanda-tanda serius pada tubuh anda, jangan menunda untuk mengunjungi dokter.</string>
    <string name="welcom">Hi, Selamat Datang!</string>
    <string name="start">Mulai</string>
    <string name="modelMl">https://model-service-218244789825.asia-southeast2.run.app/predict</string>
    <string name="inputManualBpm">Masukkan Nilai Manual</string>
    <string name="measure">Mengukur...</string>
    <string name="stop">Berhenti</string>
    <string name="failedMeasure">Gagal menghitung. Coba lagi.</string>
    <string name="notValidMeasure">Pengukuran tidak valid. Coba lagi.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="create_acc">Buat Akun</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="fullName">Nama Lengkap</string>
    <string name="confirmPassword">Konfirmasi Kata Sandi</string>
    <string name="regist">Daftar</string>
    <string name="otp">Masukkan Kode OTP</string>
    <string name="verif">Verifikasi</string>
    <string name="resendOtp">Belum Menerima Kode OTP?</string>
    <string name="registered_Email">Masukkan Email Terdaftar</string>
    <string name="confirm">Konfirmasi</string>
    <string name="newPassword">Kata Sandi Baru</string>
    <string name="repeatPassword">Ulangi Kata Sandi Anda</string>
    <string name="reMeasure">Ukur Ulang</string>
    <string name="profile">Profile</string>
    <string name="signOut">Keluar</string>
</resources>