<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.CreateAccountFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullName_edt"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:endIconMode="clear_text"
        android:hint="@string/fullName"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_edt"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:endIconMode="clear_text"
        android:hint="@string/email"
        app:helperText="Contoh: example@gmail.com"
        app:helperTextEnabled="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="11dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_edt"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:endIconMode="password_toggle"
        android:hint="@string/password"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="11dp"
        app:helperText="Masukkan Kata Sandi minimal 8 karakter"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirm_edt"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:endIconMode="password_toggle"
        android:hint="@string/confirmPassword"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="11dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/regist_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/regist"
        android:padding="14dp"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        style="@style/Widget.Material3.Button.ElevatedButton"/>

</LinearLayout>