<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.OtpFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otp_edt"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:endIconMode="clear_text"
        android:hint="@string/otp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/btn_resendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="#4493f8"
        android:text="@string/resendOtp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verif_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/verif"
        android:padding="14dp"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        style="@style/Widget.Material3.Button.ElevatedButton"/>

</LinearLayout>